[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-gap-analysis"
version = "2.0.0"
description = "Offline NIST CSF-aligned policy gap analysis with semantic matching and professional reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SudoXploit7" }
]
dependencies = [
  "sentence-transformers>=2.7.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "reportlab>=4.0.0",
  "rich>=13.7.0",
  "click>=8.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
polaris = "main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=engine --cov=output --cov-report=term-missing"

[tool.setuptools]
packages = ["engine", "llm", "output"]
